@@ -3,6 +3,8 @@ package ru.otus.shw10.executor;
 import lombok.RequiredArgsConstructor;
 import ru.otus.shw10.data.DataSet;
 import ru.otus.shw10.reflection.ReflectionHelper;
+import ru.otus.shw6.engine.CacheEngine;
+import ru.otus.shw6.engine.MyCacheEngine;
 
 import java.lang.reflect.Field;
 import java.lang.reflect.InvocationTargetException;
@@ -20,12 +22,14 @@ public class DSExecutor {
 
     private final Connection connection;
 
+    private CacheEngine<String, List<String> > cache = new MyCacheEngine<>(1000);
+
     private final String SELECT = "select %s from %s where id = %s";
     private final String INSERT = "insert into %s (%s) values (%s)";
 
     public <T extends DataSet> void save(T user) {
         try (Statement stmt = connection.createStatement()) {
-            List<String> fieldNames = ReflectionHelper.getFieldsList(user);
+            List<String> fieldNames = ReflectionHelper.getFieldsList(user, cache);
             fieldNames.remove("id");
             List<String> values = fieldNames.stream().map(field -> {
                 try {
@@ -48,7 +52,7 @@ public class DSExecutor {
 
     public <T extends DataSet> T load(long id, Class<T> clazz) {
         try {
-            T ds = (T) Class.forName(clazz.getName()).newInstance();
+            T ds = clazz.getDeclaredConstructor().newInstance();
             List<String> fields = ReflectionHelper.getFieldsList(ds);
             String SQL = String.format(SELECT, String.join(",", fields), ds.getClass().getSimpleName(), id);
             System.out.println("SQL = " + SQL);
@@ -70,7 +74,10 @@ public class DSExecutor {
                 System.err.println(sqle.getMessage());
             }
             return ds;
-        } catch (ClassNotFoundException | InstantiationException | IllegalAccessException exception) {
+        } catch (InvocationTargetException |
+                NoSuchMethodException |
+                InstantiationException |
+                IllegalAccessException exception) {
             exception.printStackTrace();
         }
         return null;
